Enhance api